--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body{
     font-family: 'montserrat', sans-serif;
     color: #fff;
-    background-image: url("/İmages/bg.jpeg");
+    background-image: url("İmages/bg.jpeg");
     background-position: center;
     background-repeat: repeat;
     background-size: cover;
